# betting_test

./: .dockerignore  .gitignore  README  README.md  bet_maker_docker.env  docker-compose.yml  line_provider_docker.env  rabbitmq_routing.json
bet_maker/: Dockerfile  api.sh  dev.env  pyproject.toml  requirements.txt
bet_maker/alembic/: env.py
bet_maker/alembic/versions/: 50cf60cbffe3_create_event_table.py  896b4f3980ae_create_bet_table.py
bet_maker/app/: main.py
bet_maker/app/applications/: bet.py  event.py
bet_maker/app/core/: config.py  db.py
bet_maker/app/models/: bet.py  event.py
bet_maker/app/routers/: bet.py  event.py
bet_maker/app/schemas/: bet.py  event.py
bet_maker/app/services/: bet_processing.py  rabbit.py
integrity_test/: .gitignore  README.md  config.py  dev.env  docker.env  pyproject.toml  test_main.py
line_provider/: Dockerfile  dev.env  dev.sh  pyproject.toml  requirements.txt
line_provider/alembic/: env.py
line_provider/app/: line_finisher.py  main.py
line_provider/app/applications/: event.py
line_provider/app/core/: config.py  db.py  rabbit.py
line_provider/app/routers/: event.py
line_provider/app/schemas/: event.py
line_provider/app/services/: line_finisher.py  rabbit.py
