[tool.poetry]
name = "integrity-test"
version = "0.1.0"
description = ""
authors = ["anton <angeloffree@yandex.ru>"]
readme = "README.md"
packages = [{include = "integrity_test"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
httpx = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
