[tool.poetry]
name = "line-provider"
version = "0.1.0"
description = ""
authors = ["anton <angeloffree@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
coloredlogs = "^15.0.1"
python-dotenv = "^1.0.1"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
aiorabbit = "^1.0.0"
greenlet = "^3.0.3"
poetry-plugin-export = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
